--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
 #map {
   height: 65dvh;
   width: 100%;
   position: absolute;
   bottom: 0;
+  z-index: 1;
 }
 
 body {
   margin: unset;
+  font-family: "Rubik", sans-serif;
 }
 
 h1 {
@@ -18,4 +21,63 @@ h1 {
   height: 35dvh;
   background-repeat: no-repeat;
   background-size: 100% 100%;
+}
+@media only screen and (max-width: 600px) {
+  .upper-wrapper {
+    background-image: url(images/pattern-bg-mobile.png);
+  }
+}
+
+.visual-content {
+  border: 1px solid red;
+  width: 76dvw;
+  margin: auto;
+  position: relative;
+  top: 3dvh;
+  z-index: 2;
+}
+.visual-content h1 {
+  margin: auto;
+  width: 275px;
+  color: white;
+  font-weight: 500;
+}
+.visual-content .submit-form {
+  margin: auto;
+  width: 39dvw;
+  margin-top: 25px;
+}
+.visual-content .info-fields {
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+}
+.visual-content .info-fields span {
+  color: hsl(0, 0%, 17%);
+  font-size: 10px;
+}
+.visual-content .info-fields p {
+  font-size: 20px;
+}
+
+#InField {
+  width: 33dvw;
+  padding: 14.5px;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  border: none;
+  font-size: 18px;
+  color: hsl(0, 0%, 59%);
+}
+
+#submitField {
+  width: 50px;
+  background-color: black;
+  border: none;
+  padding: 17.4px;
+  position: absolute;
+  color: white;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  margin-left: -4px;
 }/*# sourceMappingURL=style.css.map */
