--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+
+//Border radius
+$border: 15px;
+
 #map { 
     height: 65dvh; 
     width: 100%;
     position: absolute;
     bottom: 0;
+    z-index: 1;
 }
 body {
     margin: unset;
+    font-family: 'Rubik', sans-serif;
 }
 h1{
     margin-top: unset;
@@ -15,4 +22,61 @@ h1{
     height: 35dvh;
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    @media only screen and (max-width: 600px ){
+        background-image: url(images/pattern-bg-mobile.png)
+    }
 }
+.visual-content{
+    border: 1px solid red;
+    width: 76dvw;  // old one was 60dvw
+    margin: auto;
+    position: relative;
+    top: 3dvh;
+    z-index: 2;
+    h1 {
+        margin: auto;
+        width: 275px;
+        color: white;
+        font-weight: 500;
+    }
+    .submit-form{
+        margin: auto;
+        width: 39dvw;
+        margin-top: 25px;
+    }
+    .info-fields{
+        display: flex;
+        justify-content: space-between;
+        background-color: white;
+        span {
+            color: hsl(0, 0%, 17%);
+            font-size: 10px;
+        }
+        p{
+            font-size: 20px;
+        }
+    }
+
+}
+
+#InField {
+    width: 33dvw;
+    padding: 14.5px;
+    border-top-left-radius: $border;
+    border-bottom-left-radius: $border;
+    border: none;
+    font-size: 18px;
+    color: hsl(0, 0%, 59%);
+}
+#submitField {
+    width: 50px;
+    background-color: black;
+    border: none;
+    padding: 17.4px;
+    position: absolute;
+    color: white;
+    border-top-right-radius: $border;
+    border-bottom-right-radius: $border;
+    margin-left: -4px;
+}
+
