--- a/style.scss
+++ b/style.scss
@@ -48,6 +48,12 @@ h1{
         display: flex;
         justify-content: space-between;
         background-color: white;
+        div:nth-of-type(2) p{
+            width: 175px;
+        }
+        div:nth-of-type(4) p{
+            width: 145px;
+        }
         span {
             color: hsl(0, 0%, 17%);
             font-size: 10px;
@@ -60,7 +66,7 @@ h1{
 }
 
 #InField {
-    width: 33dvw;
+    width: 34dvw;
     padding: 14.5px;
     border-top-left-radius: $border;
     border-bottom-left-radius: $border;
@@ -80,3 +86,5 @@ h1{
     margin-left: -4px;
 }
 
+// 
+// }
