--- a/style.scss
+++ b/style.scss
@@ -28,7 +28,7 @@ h1{
 }
 .visual-content{
     border: 1px solid red;
-    width: 76dvw;  // old one was 60dvw
+    width: 77dvw;  // old one was 60dvw
     margin: auto;
     position: relative;
     top: 3dvh;
@@ -48,6 +48,8 @@ h1{
         display: flex;
         justify-content: space-between;
         background-color: white;
+        border-radius: $border;
+        // margin-top: 12dvh;
         div:nth-of-type(2) p{
             width: 175px;
         }
@@ -57,9 +59,23 @@ h1{
         span {
             color: hsl(0, 0%, 17%);
             font-size: 10px;
+            font-weight: 500;
         }
         p{
             font-size: 20px;
+        }
+        div{
+            flex: 1;
+           p {
+            margin-top: 10px ;
+            padding: 0px 0px 5px 20px;
+            font-weight: 700;
+            
+           }
+           span {
+            padding: 23px 0 0 20px;
+            display: inline-block;
+           }
         }
     }
 
@@ -84,6 +100,14 @@ h1{
     border-top-right-radius: $border;
     border-bottom-right-radius: $border;
     margin-left: -4px;
+}
+
+.info-fields > div::before {
+    height: 60px;
+    border-left: 1px solid hsl(0, 0%, 59%);;
+    content: "";
+    position: absolute;
+    bottom: 30px;
 }
 
 // 
