--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
 #map {
-  height: 65dvh;
+  height: 73dvh;
   width: 100%;
   position: absolute;
   bottom: 0;
@@ -18,7 +18,7 @@ h1 {
 
 .upper-wrapper {
   background-image: url(images/pattern-bg-desktop.png);
-  height: 35dvh;
+  height: 27dvh;
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
@@ -33,7 +33,7 @@ h1 {
   width: 77dvw;
   margin: auto;
   position: relative;
-  top: 3dvh;
+  top: 2.5dvh;
   z-index: 2;
 }
 .visual-content h1 {
@@ -52,6 +52,7 @@ h1 {
   justify-content: space-between;
   background-color: white;
   border-radius: 15px;
+  margin-top: 4dvh;
 }
 .visual-content .info-fields div:nth-of-type(2) p {
   width: 175px;
@@ -72,7 +73,7 @@ h1 {
 }
 .visual-content .info-fields div p {
   margin-top: 10px;
-  padding: 0px 0px 5px 20px;
+  padding: 0px 0px 15px 20px;
   font-weight: 700;
 }
 .visual-content .info-fields div span {
