--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,7 @@
 $border: 15px;
 
 #map { 
-    height: 65dvh; 
+    height: 73dvh; 
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -19,7 +19,7 @@ h1{
 }
 .upper-wrapper{
     background-image: url(images/pattern-bg-desktop.png);
-    height: 35dvh;
+    height: 27dvh;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     @media only screen and (max-width: 600px ){
@@ -31,7 +31,7 @@ h1{
     width: 77dvw;  // old one was 60dvw
     margin: auto;
     position: relative;
-    top: 3dvh;
+    top: 2.5dvh;
     z-index: 2;
     h1 {
         margin: auto;
@@ -49,7 +49,7 @@ h1{
         justify-content: space-between;
         background-color: white;
         border-radius: $border;
-        // margin-top: 12dvh;
+        margin-top: 4dvh;
         div:nth-of-type(2) p{
             width: 175px;
         }
@@ -68,7 +68,7 @@ h1{
             flex: 1;
            p {
             margin-top: 10px ;
-            padding: 0px 0px 5px 20px;
+            padding: 0px 0px 15px 20px;
             font-weight: 700;
             
            }
