--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,13 @@
 $border: 15px;
 
 #map { 
-    height: 73dvh; 
+    height: 71dvh; 
+    @media only screen and (max-width: 900px ){
+        height: 68dvh;
+    }
+    @media only screen and (max-width: 450px){
+        height: 60dvh;
+    }
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -19,7 +25,13 @@ h1{
 }
 .upper-wrapper{
     background-image: url(images/pattern-bg-desktop.png);
-    height: 27dvh;
+    height: 29dvh;
+    @media only screen and (max-width: 900px ){
+        height: 32dvh;
+    }
+    @media only screen and (max-width: 450px){
+        height: 40dvh;
+    }
     background-repeat: no-repeat;
     background-size: 100% 100%;
     @media only screen and (max-width: 600px ){
@@ -29,6 +41,9 @@ h1{
 .visual-content{
     border: 1px solid red;
     width: 77dvw;  // old one was 60dvw
+    @media only screen and (max-width: 450px){
+        width: 87dvw;
+    }
     margin: auto;
     position: relative;
     top: 2.5dvh;
@@ -38,11 +53,18 @@ h1{
         width: 275px;
         color: white;
         font-weight: 500;
+        @media only screen and (max-width: 450px){
+            width: 205px;
+            font-size: 24px;
+        }
     }
     .submit-form{
         margin: auto;
         width: 39dvw;
         margin-top: 25px;
+        @media only screen and (max-width: 900px ){
+           width: unset;
+        }
     }
     .info-fields{
         display: flex;
@@ -50,33 +72,74 @@ h1{
         background-color: white;
         border-radius: $border;
         margin-top: 4dvh;
-        div:nth-of-type(2) p{
+        @media only screen and (max-width: 900px ){
+            flex-direction: column;
+            align-items: center;
+        }
+
+          div:nth-of-type(2) p{
             width: 175px;
-        }
-        div:nth-of-type(4) p{
+            @media only screen and (max-width: 900px ){
+                width: unset;
+             }
+          }
+          div:nth-of-type(4) p{
             width: 145px;
-        }
-        span {
-            color: hsl(0, 0%, 17%);
-            font-size: 10px;
-            font-weight: 500;
-        }
-        p{
+            @media only screen and (max-width: 900px ){
+                width: unset;
+                margin-bottom: 20px;
+             }
+          }
+
+          div:nth-of-type(2) span{
+            @media only screen and (max-width: 900px ){
+               padding-left: 55px;
+            }
+          }
+          div:nth-of-type(3) span{
+            @media only screen and (max-width: 900px ){
+                padding-left: 19px;
+            }
+          }
+          div:nth-of-type(4) span{
+            @media only screen and (max-width: 900px ){
+                padding-left: 58px;
+            }
+          }
+
+          span {
+            font-size: 9px;
+            font-weight: bold;
+            color: hsl(0, 0%, 59%);
+            letter-spacing: 2px;
+          }
+          p{
             font-size: 20px;
-        }
-        div{
+            @media only screen and (max-width: 450px){
+                font-size: 18px;
+            }
+          }
+          div{
             flex: 1;
-           p {
-            margin-top: 10px ;
-            padding: 0px 0px 15px 20px;
-            font-weight: 700;
+             p {
+              margin-top: 10px ;
+              padding: 0px 0px 15px 20px;
+              font-weight: 700;
+              @media only screen and (max-width: 900px ){
+                padding: unset;
+                margin-bottom: 10px;
+                margin-top: 5px ;
+             }
             
-           }
-           span {
-            padding: 23px 0 0 20px;
-            display: inline-block;
-           }
-        }
+             }
+             span {
+              padding: 23px 0 0 20px;
+              display: inline-block;
+              @media only screen and (max-width: 900px ){
+                padding: 12px 0 0 27px;
+            }
+             }
+             }
     }
 
 }
@@ -89,6 +152,9 @@ h1{
     border: none;
     font-size: 18px;
     color: hsl(0, 0%, 59%);
+    @media only screen and (max-width: 900px ){
+        width: calc(100% - 75px);
+     }
 }
 #submitField {
     width: 50px;
@@ -102,12 +168,15 @@ h1{
     margin-left: -4px;
 }
 
-.info-fields > div::before {
+.info-fields > div:nth-child(n+2)::before {
     height: 60px;
-    border-left: 1px solid hsl(0, 0%, 59%);;
+    border-left: 1px solid hsl(0deg 0% 59% / 50%);
     content: "";
     position: absolute;
-    bottom: 30px;
+    bottom: 41px;
+    @media only screen and (max-width: 900px ){
+        height: 0;
+    }
 }
 
 // 
