--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ h1 {
 @media only screen and (max-width: 900px) {
   .visual-content .submit-form {
     width: unset;
+    margin-top: 30px;
   }
 }
 .visual-content .info-fields {
@@ -88,12 +89,13 @@ h1 {
   justify-content: space-between;
   background-color: white;
   border-radius: 15px;
-  margin-top: 4dvh;
+  margin-top: 5.5dvh;
 }
 @media only screen and (max-width: 900px) {
   .visual-content .info-fields {
     flex-direction: column;
     align-items: center;
+    margin-top: 3.5dvh;
   }
 }
 .visual-content .info-fields div:nth-of-type(2) p {
@@ -111,6 +113,12 @@ h1 {
   .visual-content .info-fields div:nth-of-type(4) p {
     width: unset;
     margin-bottom: 20px;
+  }
+}
+@media only screen and (max-width: 900px) {
+  .visual-content .info-fields div:nth-of-type(1) span {
+    padding-top: 0px;
+    margin-top: 20px;
   }
 }
 @media only screen and (max-width: 900px) {
@@ -179,6 +187,8 @@ h1 {
 @media only screen and (max-width: 900px) {
   #InField {
     width: calc(100% - 75px);
+    font-size: 16px;
+    padding: 16px;
   }
 }
 
