--- a/style.scss
+++ b/style.scss
@@ -64,6 +64,7 @@ h1{
         margin-top: 25px;
         @media only screen and (max-width: 900px ){
            width: unset;
+           margin-top: 30px;
         }
     }
     .info-fields{
@@ -71,10 +72,11 @@ h1{
         justify-content: space-between;
         background-color: white;
         border-radius: $border;
-        margin-top: 4dvh;
+        margin-top: 5.5dvh;
         @media only screen and (max-width: 900px ){
             flex-direction: column;
             align-items: center;
+            margin-top: 3.5dvh;
         }
 
           div:nth-of-type(2) p{
@@ -89,6 +91,13 @@ h1{
                 width: unset;
                 margin-bottom: 20px;
              }
+          }
+
+          div:nth-of-type(1) span{
+            @media only screen and (max-width: 900px ){
+                padding-top: 0px;
+                margin-top: 20px;
+            }
           }
 
           div:nth-of-type(2) span{
@@ -154,6 +163,8 @@ h1{
     color: hsl(0, 0%, 59%);
     @media only screen and (max-width: 900px ){
         width: calc(100% - 75px);
+        font-size: 16px;
+        padding: 16px;
      }
 }
 #submitField {
