--- a/style.scss
+++ b/style.scss
@@ -75,7 +75,6 @@ h1{
         margin-top: 5.5dvh;
         @media only screen and (max-width: 900px ){
             flex-direction: column;
-            align-items: center;
             margin-top: 3.5dvh;
         }
 
@@ -100,21 +99,6 @@ h1{
             }
           }
 
-          div:nth-of-type(2) span{
-            @media only screen and (max-width: 900px ){
-               padding-left: 55px;
-            }
-          }
-          div:nth-of-type(3) span{
-            @media only screen and (max-width: 900px ){
-                padding-left: 19px;
-            }
-          }
-          div:nth-of-type(4) span{
-            @media only screen and (max-width: 900px ){
-                padding-left: 58px;
-            }
-          }
 
           span {
             font-size: 9px;
@@ -130,6 +114,9 @@ h1{
           }
           div{
             flex: 1;
+            @media only screen and (max-width: 900px ){
+                text-align: center;
+            }
              p {
               margin-top: 10px ;
               padding: 0px 0px 15px 20px;
@@ -145,7 +132,7 @@ h1{
               padding: 23px 0 0 20px;
               display: inline-block;
               @media only screen and (max-width: 900px ){
-                padding: 12px 0 0 27px;
+                padding: 12px 0 0 0;
             }
              }
              }
