--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,16 @@ $border: 15px;
     position: absolute;
     bottom: 0;
     z-index: 1;
+     .leaflet-map-pane {
+        @media only screen and (max-height: 775px ){
+            top: 83px;
+        }
+     }
+     .leaflet-top.leaflet-left{
+        @media only screen and (max-width: 900px ){
+           display: none;
+        }
+     }
 }
 body {
     margin: unset;
@@ -147,12 +157,21 @@ h1{
     border-bottom-left-radius: $border;
     border: none;
     font-size: 18px;
-    color: hsl(0, 0%, 59%);
     @media only screen and (max-width: 900px ){
         width: calc(100% - 75px);
         font-size: 16px;
         padding: 16px;
      }
+    &:hover {
+        cursor: pointer;
+    }
+    &:focus {
+        outline: none;
+        cursor: unset;
+    }
+    &::placeholder {
+        color: hsl(0, 0%, 59%);
+    }
 }
 #submitField {
     width: 50px;
@@ -164,6 +183,9 @@ h1{
     border-top-right-radius: $border;
     border-bottom-right-radius: $border;
     margin-left: -4px;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .info-fields > div:nth-child(n+2)::before {
