--- a/style.scss
+++ b/style.scss
@@ -192,7 +192,7 @@ h1{
     border-left: 1px solid hsl(0deg 0% 59% / 50%);
     content: "";
     position: absolute;
-    bottom: 41px;
+    margin-top: 22px;
     @media only screen and (max-width: 900px ){
         height: 0;
     }
