--- a/style.scss
+++ b/style.scss
@@ -67,13 +67,38 @@ h1{
             font-size: 24px;
         }
     }
-    .submit-form{
+    select {
+        position: absolute;
+        margin-top: -31px;
+        height: 37px;
+        width: 84px;
+        border-radius: 15px;
+        padding-left: 6px;
+        outline: none;
+        border: 1px solid black;
+        @media only screen and (max-width: 900px ){
+            display: none;
+         }
+    }
+     .submit-form{
         margin: auto;
         width: 39dvw;
         margin-top: 25px;
         @media only screen and (max-width: 900px ){
            width: unset;
            margin-top: 30px;
+        }
+         .error-msg {   
+         display: none;
+         position: fixed;
+         color: red;
+         font-weight: bold;
+         margin-left: 12px;
+         margin-top: 6px;
+         @media only screen and (max-width: 900px){
+            margin-top: 3px;
+            font-size: 13px;
+        }
         }
     }
     .info-fields{
