--- a/style.scss
+++ b/style.scss
@@ -63,7 +63,7 @@ h1{
         color: white;
         font-weight: 500;
         @media only screen and (max-width: 450px){
-            width: 205px;
+            width: 207px;
             font-size: 24px;
         }
     }
@@ -72,7 +72,7 @@ h1{
         margin-top: -31px;
         height: 37px;
         width: 84px;
-        border-radius: 15px;
+        border-radius: $border;
         padding-left: 6px;
         outline: none;
         border: 1px solid black;
@@ -123,6 +123,7 @@ h1{
             @media only screen and (max-width: 900px ){
                 width: unset;
                 margin-bottom: 20px;
+                padding: 0 2px 0 2px;
              }
           }
 
