--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h1 {
 }
 @media only screen and (max-width: 450px) {
   .visual-content h1 {
-    width: 205px;
+    width: 207px;
     font-size: 24px;
   }
 }
@@ -150,6 +150,7 @@ h1 {
   .visual-content .info-fields div:nth-of-type(4) p {
     width: unset;
     margin-bottom: 20px;
+    padding: 0 2px 0 2px;
   }
 }
 @media only screen and (max-width: 900px) {
